# flask-tutorials

./: README.md  pyproject.toml
flask_tutorial/: hello.py
flaskr/: __init__.py  auth.py  db.py
instance/: flaskr.sqlite
tests/: data.sql  test_auth.py
